infra/k8s/moderator-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderator
  template:
    metadata:
      labels:
        app: moderator
    spec:
      containers:
        - name: moderator
          image: vinothpandian/k8s-moderator:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: moderator-srv
spec:
  selector:
    app: moderator
  ports:
    - name: moderator
      protocol: TCP
      port: 4004
      targetPort: 4004
